fix(List): fix tile heading overflow

--- a/packages/components/src/components/List/components/ListItemView/ListItemView.module.scss
+++ b/packages/components/src/components/List/components/ListItemView/ListItemView.module.scss
@@ -36,6 +36,7 @@
 
   .heading {
     color: var(--text--color--default);
+    overflow-wrap: break-word;
   }
 
   .header {
